# General_Zmey

./: CMakeLists.txt  README.md  fruits.cpp  fruits.h  main.cpp
